[package]
name = "sameold"
version = "0.1.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/cbs228/sameold"
repository = "https://github.com/cbs228/sameold.git"
readme = "README.md"

[badges]
maintenance = {status = "experimental"}

[dependencies]
assert_approx_eq = "1.1.0"
nalgebra = "^0.26.1"
num-complex = "^0.3.1"
num-traits = "^0.2"
