[package]
name = "samedec"
rust-version = "1.70"
description = "A SAME/EAS digital receiver and alerting program"
version = "0.3.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/cbs228/sameold"
repository = "https://github.com/cbs228/sameold.git"
readme = "README.md"

[dependencies]
sameold = {path = "../sameold", version = "^0.3.0"}
anyhow = "^1"
byteorder = "^1.4"
clap = {version = "~4.3", features = ["color", "derive", "wrap_help"]}
is-terminal = "^0.4"
log = "^0.4"
pretty_env_logger = "^0.5"

# the following pins are required for Rust 1.68 compatibility
anstyle = "=1.0.2"
clap_lex = "=0.5.0"

[dependencies.chrono]
version = "^0.4"
default-features = false
features = ["clock", "std"]

