[package]
name = "samedec"
rust-version = "1.74"
description = "A SAME/EAS digital receiver and alerting program"
version = "0.4.1"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/cbs228/sameold"
repository = "https://github.com/cbs228/sameold.git"
readme = "README.md"

[dependencies]
sameold = {path = "../sameold", version = "^0.5.0"}
sameplace = {path = "../sameplace", version = "^0.1.0", features = ["chrono"]}
anyhow = "^1"
byteorder = "^1.4"
clap = {version = "^4.5", features = ["color", "derive", "wrap_help"]}
terminal_size = "^0.4"
log = "^0.4"
pretty_env_logger = "^0.5"

[dependencies.chrono]
version = "^0.4"
default-features = false
features = ["clock", "std"]
