[package]
name = "sameold"
rust-version = "1.70"
description = "A SAME/EAS digital receiver library"
version = "0.5.0"
authors = ["Colin S <3526918+cbs228@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/cbs228/sameold"
repository = "https://github.com/cbs228/sameold.git"
readme = "README.md"

[dependencies]
sameplace = {path = "../sameplace", version = "^0.1"}
arrayvec = "^0.7.1"
arraydeque = "^0.5"
log = "0.4"
nalgebra = "^0.33.2"
num-complex = "^0.4"
num-traits = "^0.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = ["chrono"]
chrono = ["sameplace/chrono"]
